--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
-demo:0.0.1-SNAPSHOT
+Image name: demo:0.0.1-SNAPSHOT
 
 docker container run --network network-mysql --name demo -p 8082:8082 -d demo:0.0.1-SNAPSHOT
+
+
+http://localhost:8082/save
+http://localhost:8082/all
